# lvgl_sdl2_cmake_vscode

./: CMakeLists.txt  README.md  main.c
lib/lvgl/: lv_conf.h  lv_drv_conf.h
lib/lvgl/lv_drivers/: CMakeLists.txt
lib/lvgl/lv_drivers/display/: monitor.h
lib/lvgl/lv_drivers/indev/: mouse.h  mousewheel.h
lib/lvgl/lv_examples/: CMakeLists.txt
lib/lvgl/lvgl/: CMakeLists.txt
